reimplemented Queue to use the Vector from previous task